--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
+
+    <center>
+        <h1>NBA 2023-2024 Playoff Prediction</h1>
+        <a href="https://www.nba.com/standings">NBA Playoff standings</a>
+    </center>
+
     <!-- Canvas element to draw the chart -->
     <canvas id="voteChart" width="800" height="400"></canvas>
 
@@ -89,5 +95,26 @@
         const ctx = document.getElementById('voteChart').getContext('2d');
         new Chart(ctx, config);
     </script>
+    
+    <center>
+        <table>
+            <tr>
+                <th>Game</th>
+                <th>_w1998</th>
+                <th>Chrïs</th>
+                <th>Lance</th>
+                <th>比爾</th>
+                <th>安東東</th>
+            </tr>
+            <tr>
+                <td>西區附加賽: Lakers vs Pelicans</td>
+                <td>&#10004;</td>
+                <td>&#10004;</td>
+                <td>&#10004;</td>
+                <td>&#10004;</td>
+                <td>&#10004;</td>
+            </tr>
+        </table>
+    </center>
 </body>
 </html>
