--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
     <!-- Include Chart.js library -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
+<style>
+    table {
+        border-collapse: collapse;
+        width: 100%;
+    }
+
+    th, td {
+        border: 1px solid black;
+        padding: 8px;
+        text-align: center;
+    }
+
+    th {
+        background-color: #f2f2f2;
+    }
+</style>
 <body>
 
     <center>
@@ -113,6 +129,30 @@
                 <td>&#10004;</td>
                 <td>&#10004;</td>
                 <td>&#10004;</td>
+            </tr>
+            <tr>
+                <td>西區附加賽: Kings vs Warriors</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>東區附加賽: 76ers vs Heat</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>東區附加賽: Bulls vs Hawks</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
             </tr>
         </table>
     </center>
