--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="column">
             <table>
                 <tr>
-                    <th>Game</th>
+                    <th>Game Matchup History</th>
                     <th>_w1998</th>
                     <th>Chrïs</th>
                     <th>Lance</th>
@@ -144,7 +144,7 @@
                 responsive: true,
                 plugins: {
                     title: {
-                        display: true,
+                        display: false,
                         text: 'NBA 2023-2024 Playoff Prediction'
                     }
                 },
