--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         // Initialize Grid.js table
         const grid = new gridjs.Grid({
-            columns: ['Game', '_w1998', 'Chrïs', 'Lance', '比爾', '安東東'], // Column headers
+            columns: ['Game Match', '_w1998', 'Chrïs', 'Lance', '比爾', '安東東'], // Column headers
             data: gridData.slice(1), // Data for the table
             resizable: true, // Allow columns to be resizable
             pagination: {
