--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
             ['西區附加賽: Lakers vs Pelicans', '✅', '✅', '✅', '✅', '✅'],
             ['西區附加賽: Kings vs Warriors', '❎', '❎', '❎', '✅', '✅'],
             ['東區附加賽: 76ers vs Heat', '', '', '', '', ''],
-            ['東區附加賽: Bulls vs Hawks', '', '', '', '', '']
+            ['東區附加賽: Bulls vs Hawks', '', '', '', '', ''],
             ['西區附加賽: Kings vs Pelicans', '', '', '', '', ''],
         ];
 
         // Initialize Grid.js table
         const grid = new gridjs.Grid({
-            columns: ['Game Match', '_w1998', 'Chrïs', 'Lance', '比爾', '安東東'], // Column headers
+            columns: ['Game', '_w1998', 'Chrïs', 'Lance', '比爾', '安東東'], // Column headers
             data: gridData.slice(1), // Data for the table
             resizable: true, // Allow columns to be resizable
             pagination: {
