--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
     <script>
         // Data for player names and scores
         let playerNames = ['_w1998', 'Chrïs', 'Lance', '比爾', '安東東'];
-        let scores = [1, 1, 1, 2, 2];
+        let scores = [2, 1, 2, 3, 2];
 
         // Data for the Grid.js table
         const gridData = [
             ['Game Match', '_w1998', 'Chrïs', 'Lance', '比爾', '安東東'],
             ['西區附加賽: Lakers vs Pelicans', '✅', '✅', '✅', '✅', '✅'],
             ['西區附加賽: Kings vs Warriors', '❎', '❎', '❎', '✅', '✅'],
-            ['東區附加賽: 76ers vs Heat', '', '', '', '', ''],
+            ['東區附加賽: 76ers vs Heat', '✅', '', '✅', '✅', ''],
             ['東區附加賽: Bulls vs Hawks', '', '', '', '', ''],
             ['西區附加賽: Kings vs Pelicans', '', '', '', '', ''],
         ];
