--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <script>
         // Data for player names and scores
         let playerNames = ['_w1998', 'Chrïs', 'Lance', '比爾', '安東東'];
-        let scores = [2, 1, 2, 3, 2];
+        let scores = [3, 1, 3, 3, 2];
 
         // Data for the Grid.js table
         const gridData = [
@@ -57,8 +57,9 @@
             ['西區附加賽: Lakers vs Pelicans', '✅', '✅', '✅', '✅', '✅'],
             ['西區附加賽: Kings vs Warriors', '❎', '❎', '❎', '✅', '✅'],
             ['東區附加賽: 76ers vs Heat', '✅', '', '✅', '✅', ''],
-            ['東區附加賽: Bulls vs Hawks', '', '', '', '', ''],
+            ['東區附加賽: Bulls vs Hawks', '✅', '', '✅', '❎', ''],
             ['西區附加賽: Kings vs Pelicans', '', '', '', '', ''],
+            ['東區附加賽: Bulls vs Heat', '', '', '', '', ''],
         ];
 
         // Initialize Grid.js table
