--- a/index.html
+++ b/index.html
@@ -54,18 +54,18 @@
         // Data for the Grid.js table
         const gridData = [
             ['Game Match', '_w1998', 'Chrïs', 'Lance', '比爾', '安東東', 'PinYen'],
-            ['東區首輪: Pacers vs Bucks', '', '', '', '', '', ''],
-            ['西區首輪: Mavericks vs Clippers', '', '', '', '', '', ''],
-            ['西區首輪: Lakers vs Nuggets', '', '', '', '', '', ''],
-            ['東區首輪: 76ers vs Knicks', '', '', '', '', '', ''],
-            ['西區首輪: Suns vs Timberwolves', '', '', '', '', '', ''],
-            ['東區首輪: Magic vs Cavaliers', '', '', '', '', '', ''],
-            ['西區附加賽: Kings vs Pelicans', '', '', '', '', '', ''],
-            ['東區附加賽: Bulls vs Heat', '', '', '', '', '', ''],
-            ['東區附加賽: 76ers vs Heat', '✅', '', '✅', '✅', '', ''],
-            ['東區附加賽: Bulls vs Hawks', '✅', '', '✅', '❎', '', ''],
-            ['西區附加賽: Lakers vs Pelicans', '✅', '✅', '✅', '✅', '✅', ''],
-            ['西區附加賽: Kings vs Warriors', '❎', '❎', '❎', '✅', '✅', ''],
+            ['Pacers vs Bucks', '', '', '', '', '', ''],
+            ['Mavericks vs Clippers', '', '', '', '', '', ''],
+            ['Lakers vs Nuggets', '', '', '', '', '', ''],
+            ['76ers vs Knicks', '', '', '', '', '', ''],
+            ['Suns vs Timberwolves', '', '', '', '', '', ''],
+            ['Magic vs Cavaliers', '', '', '', '', '', ''],
+            ['Kings vs Pelicans', '', '', '', '', '', ''],
+            ['Bulls vs Heat', '', '', '', '', '', ''],
+            ['76ers vs Heat', '✅', '', '✅', '✅', '', ''],
+            ['Bulls vs Hawks', '✅', '', '✅', '❎', '', ''],
+            ['Lakers vs Pelicans', '✅', '✅', '✅', '✅', '✅', ''],
+            ['Kings vs Warriors', '❎', '❎', '❎', '✅', '✅', ''],
         ];
 
         // Initialize Grid.js table
@@ -73,9 +73,18 @@
             columns: ['Game', '_w1998', 'Chrïs', 'Lance', '比爾', '安東東', 'PinYen'], // Column headers
             data: gridData.slice(1), // Data for the table
             resizable: true, // Allow columns to be resizable
+            search: true, // Enable search functionality
             pagination: {
                 enabled: true,
-                limit: 10 // Number of rows per page
+                limit: 5 // Number of rows per page
+            },
+            style: {
+                td: {
+                    'text-align': 'left' // Align text to the left in table cells
+                },
+                table : {
+                    'font-size': '12px' // Set font size for the table
+                }
             }
         });
 
