--- a/index.html
+++ b/index.html
@@ -65,11 +65,12 @@
     <script>
         // Data for player names and scores
         let playerNames = ['_w1998', 'Chrïs', 'Lance', '比爾', '安東東', 'PinYen'];
-        let scores = [3, 1, 3, 3, 2, 0];
+        let scores = [4, 1, 4, 4, 2, 0];
 
         // Data for the Grid.js table
         const gridData = [
             ['Game Match', '_w1998', 'Chrïs', 'Lance', '比爾', '安東東', 'PinYen'],
+            ['Celtics vs Heat', '', '', '', '', '', ''],
             ['Pacers vs Bucks', '', '', '', '', '', ''],
             ['Mavericks vs Clippers', '', '', '', '', '', ''],
             ['Lakers vs Nuggets', '', '', '', '', '', ''],
@@ -77,7 +78,7 @@
             ['Suns vs Timberwolves', '', '', '', '', '', ''],
             ['Magic vs Cavaliers', '', '', '', '', '', ''],
             ['Kings vs Pelicans', '', '', '', '', '', ''],
-            ['Bulls vs Heat', '', '', '', '', '', ''],
+            ['Bulls vs Heat', '✅', '❎', '✅', '✅', '', '❎'],
             ['76ers vs Heat', '✅', '', '✅', '✅', '', ''],
             ['Bulls vs Hawks', '✅', '', '✅', '❎', '', ''],
             ['Lakers vs Pelicans', '✅', '✅', '✅', '✅', '✅', ''],
