--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             ['76ers vs Knicks', '', '', '', '', '', ''],
             ['Suns vs Timberwolves', '', '', '', '', '', ''],
             ['Magic vs Cavaliers', '', '', '', '', '', ''],
-            ['Kings vs Pelicans', '', '', '', '', '', ''],
+            ['Kings vs Pelicans', '❎', '', '❎', '❎', '', ''],
             ['Bulls vs Heat', '✅', '❎', '✅', '✅', '', '❎'],
             ['76ers vs Heat', '✅', '', '✅', '✅', '', ''],
             ['Bulls vs Hawks', '✅', '', '✅', '❎', '', ''],
