--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         // Data for the Grid.js table
         const gridData = [
             ['Game Match', '_w1998', 'Chrïs', 'Lance', '比爾', '安東東', 'PinYen'],
+            ['Thunder vs Pelicans', '', '', '', '', '', ''],
             ['Celtics vs Heat', '', '', '', '', '', ''],
             ['Pacers vs Bucks', '', '', '', '', '', ''],
             ['Mavericks vs Clippers', '', '', '', '', '', ''],
