--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <script>
         // Data for player names and scores
         let playerNames = ['_w1998', 'Chrïs', 'Lance', '比爾', '安東東', 'PinYen'];
-        let scores = [4, 1, 4, 4, 2, 0];
+        let scores = [5, 1, 5, 4, 2, 0];
 
         // Data for the Grid.js table
         const gridData = [
@@ -76,8 +76,8 @@
             ['Mavericks vs Clippers', '', '', '', '', '', ''],
             ['Lakers vs Nuggets', '', '', '', '', '', ''],
             ['76ers vs Knicks', '', '', '', '', '', ''],
-            ['Suns vs Timberwolves', '', '', '', '', '', ''],
             ['Magic vs Cavaliers', '', '', '', '', '', ''],
+            ['Suns vs Timberwolves', '✅', '❎', '✅', '❎', '', '❎'],
             ['Kings vs Pelicans', '❎', '', '❎', '❎', '', ''],
             ['Bulls vs Heat', '✅', '❎', '✅', '✅', '', '❎'],
             ['76ers vs Heat', '✅', '', '✅', '✅', '', ''],
