--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             ['Lakers vs Nuggets', '', '', '', '', '', ''],
             ['76ers vs Knicks', '', '', '', '', '', ''],
             ['Magic vs Cavaliers', '', '', '', '', '', ''],
-            ['Suns vs Timberwolves', '✅', '❎', '✅', '❎', '', '❎'],
+            ['Suns vs Timberwolves (0-4)', '✅ (3-4)', '❎ (4-3)', '✅ (2-4)', '❎ (4-2)', '', '❎ (4-2)'],
             ['Kings vs Pelicans', '❎', '', '❎', '❎', '', ''],
             ['Bulls vs Heat', '✅', '❎', '✅', '✅', '', '❎'],
             ['76ers vs Heat', '✅', '', '✅', '✅', '', ''],
