--- a/index.html
+++ b/index.html
@@ -65,17 +65,18 @@
     <script>
         // Data for player names and scores
         let playerNames = ['_w1998', 'Chrïs', 'Lance', '比爾', '安東東', 'PinYen'];
-        let scores = [6, 2, 6, 5, 2, 0];
+        let scores = [7, 3, 7, 6, 2, 0];
 
         // Data for the Grid.js table
         const gridData = [
             ['Game Match', '_w1998', 'Chrïs', 'Lance', '比爾', '安東東', 'PinYen'],
+            ['Nuggets vs Timberwolves', '', '', '', '', '', ''],
             ['Celtics vs Heat', '', '', '', '', '', ''],
             ['Pacers vs Bucks', '', '', '', '', '', ''],
             ['Mavericks vs Clippers', '', '', '', '', '', ''],
-            ['Lakers vs Nuggets', '', '', '', '', '', ''],
             ['76ers vs Knicks', '', '', '', '', '', ''],
             ['Magic vs Cavaliers', '', '', '', '', '', ''],
+            ['Lakers vs Nuggets (1-4)', '✅ (2-4)', '✅ (2-4)', '✅ (2-4)', '✅ (2-4)', '', '❎ (4-2)'],
             ['Thunder vs Pelicans (4-0)', '✅ (4-2)', '✅ (4-2)', '✅ (4-2)', '✅ (4-1)', '', ''],
             ['Suns vs Timberwolves (0-4)', '✅ (3-4)', '❎ (4-3)', '✅ (2-4)', '❎ (4-2)', '', '❎ (4-2)'],
             ['Kings vs Pelicans', '❎', '', '❎', '❎', '', ''],
