--- a/index.html
+++ b/index.html
@@ -65,16 +65,16 @@
     <script>
         // Data for player names and scores
         let playerNames = ['_w1998', 'Chrïs', 'Lance', '比爾', '安東東', 'PinYen'];
-        let scores = [10, 6, 8, 7, 2, 1];
+        let scores = [10, 6, 8, 7, 2, 4];
 
         // Data for the Grid.js table
         const gridData = [
             ['Game Match', '_w1998', 'Chrïs', 'Lance', '比爾', '安東東', 'PinYen'],
             ['Nuggets vs Timberwolves', '', '', '', '', '', ''],
-            ['Pacers vs Bucks', '', '', '', '', '', ''],
             ['Mavericks vs Clippers', '', '', '', '', '', ''],
             ['76ers vs Knicks', '', '', '', '', '', ''],
             ['Magic vs Cavaliers', '', '', '', '', '', ''],
+            ['Pacers vs Bucks (4-2)', '❎ (3-4)', '❎ (1-4)', '❎ (2-4)', '❎ (3-4)', '', '✅ (4-2)'],
             ['Celtics vs Heat (4-1)', '✅ (4-1)', '✅ (4-1)', '✅ (4-3)', '✅ (4-0)', '', '✅ (4-2)'],
             ['Lakers vs Nuggets (1-4)', '✅ (2-4)', '✅ (2-4)', '✅ (2-4)', '✅ (2-4)', '', '❎ (4-2)'],
             ['Thunder vs Pelicans (4-0)', '✅ (4-2)', '✅ (4-2)', '✅ (4-2)', '✅ (4-1)', '', ''],
