--- a/index.html
+++ b/index.html
@@ -65,15 +65,16 @@
     <script>
         // Data for player names and scores
         let playerNames = ['_w1998', 'Chrïs', 'Lance', '比爾', '安東東', 'PinYen'];
-        let scores = [10, 9, 9, 7, 2, 4];
+        let scores = [10, 10, 10, 8, 2, 7];
 
         // Data for the Grid.js table
         const gridData = [
             ['Game Match', '_w1998', 'Chrïs', 'Lance', '比爾', '安東東', 'PinYen'],
+            ['Thunder vs Mavericks', '', '', '', '', '', ''],
             ['Knicks vs Pacers', '', '', '', '', '', ''],
             ['Nuggets vs Timberwolves', '', '', '', '', '', ''],
-            ['Mavericks vs Clippers', '', '', '', '', '', ''],
             ['Magic vs Cavaliers', '', '', '', '', '', ''],
+            ['Mavericks vs Clippers (4-2)', '❎ (2-4)', '✅ (4-3)', '✅ (4-3)', '✅ (4-3)', '', '✅ (4-2)'],
             ['76ers vs Knicks (2-4)', '❎ (4-2)', '✅ (2-4)', '✅ (3-4)', '❎ (4-1)', '', '❎ (4-2)'],
             ['Pacers vs Bucks (4-2)', '❎ (3-4)', '❎ (1-4)', '❎ (2-4)', '❎ (3-4)', '', '✅ (4-2)'],
             ['Celtics vs Heat (4-1)', '✅ (4-1)', '✅ (4-1)', '✅ (4-3)', '✅ (4-0)', '', '✅ (4-2)'],
