--- a/index.html
+++ b/index.html
@@ -64,29 +64,30 @@
 
     <script>
         // Data for player names and scores
-        let playerNames = ['_w1998', 'Chrïs', 'Lance', '比爾', '安東東', 'PinYen'];
-        let scores = [10, 10, 10, 8, 2, 7];
+        let playerNames = ['_w1998', 'Chrïs', 'Lance', '比爾', '安東東', 'PinYen', 'liyang'];
+        let scores = [11, 10, 10, 9, 2, 7, 0];
 
         // Data for the Grid.js table
         const gridData = [
-            ['Game Match', '_w1998', 'Chrïs', 'Lance', '比爾', '安東東', 'PinYen'],
-            ['Thunder vs Mavericks', '', '', '', '', '', ''],
-            ['Knicks vs Pacers', '', '', '', '', '', ''],
-            ['Nuggets vs Timberwolves', '', '', '', '', '', ''],
-            ['Magic vs Cavaliers', '', '', '', '', '', ''],
-            ['Mavericks vs Clippers (4-2)', '❎ (2-4)', '✅ (4-3)', '✅ (4-3)', '✅ (4-3)', '', '✅ (4-2)'],
-            ['76ers vs Knicks (2-4)', '❎ (4-2)', '✅ (2-4)', '✅ (3-4)', '❎ (4-1)', '', '❎ (4-2)'],
-            ['Pacers vs Bucks (4-2)', '❎ (3-4)', '❎ (1-4)', '❎ (2-4)', '❎ (3-4)', '', '✅ (4-2)'],
-            ['Celtics vs Heat (4-1)', '✅ (4-1)', '✅ (4-1)', '✅ (4-3)', '✅ (4-0)', '', '✅ (4-2)'],
-            ['Lakers vs Nuggets (1-4)', '✅ (2-4)', '✅ (2-4)', '✅ (2-4)', '✅ (2-4)', '', '❎ (4-2)'],
-            ['Thunder vs Pelicans (4-0)', '✅ (4-2)', '✅ (4-2)', '✅ (4-2)', '✅ (4-1)', '', ''],
-            ['Suns vs Timberwolves (0-4)', '✅ (3-4)', '❎ (4-3)', '✅ (2-4)', '❎ (4-2)', '', '❎ (4-2)'],
-            ['Kings vs Pelicans', '❎', '', '❎', '❎', '', ''],
-            ['Bulls vs Heat', '✅', '❎', '✅', '✅', '', '❎'],
-            ['76ers vs Heat', '✅', '', '✅', '✅', '', ''],
-            ['Bulls vs Hawks', '✅', '', '✅', '❎', '', ''],
-            ['Lakers vs Pelicans', '✅', '✅', '✅', '✅', '✅', ''],
-            ['Kings vs Warriors', '❎', '❎', '❎', '✅', '✅', ''],
+            ['Game Match', '_w1998', 'Chrïs', 'Lance', '比爾', '安東東', 'PinYen', 'liyang'];
+            ['Celtics vs Cavaliers', '', '', '', '', '', '', ''],
+            ['Thunder vs Mavericks', '', '', '', '', '', '', ''],
+            ['Knicks vs Pacers', '', '', '', '', '', '', ''],
+            ['Nuggets vs Timberwolves', '', '', '', '', '', '', ''],
+            ['Magic vs Cavaliers (3-4)', '✅ (2-4)', '❎ (4-2)', '❎ (4-2)', '✅ (1-4)', '', '❎ (4-2)', ''],
+            ['Mavericks vs Clippers (4-2)', '❎ (2-4)', '✅ (4-3)', '✅ (4-3)', '✅ (4-3)', '', '✅ (4-2)', ''],
+            ['76ers vs Knicks (2-4)', '❎ (4-2)', '✅ (2-4)', '✅ (3-4)', '❎ (4-1)', '', '❎ (4-2)', ''],
+            ['Pacers vs Bucks (4-2)', '❎ (3-4)', '❎ (1-4)', '❎ (2-4)', '❎ (3-4)', '', '✅ (4-2)', ''],
+            ['Celtics vs Heat (4-1)', '✅ (4-1)', '✅ (4-1)', '✅ (4-3)', '✅ (4-0)', '', '✅ (4-2)', ''],
+            ['Lakers vs Nuggets (1-4)', '✅ (2-4)', '✅ (2-4)', '✅ (2-4)', '✅ (2-4)', '', '❎ (4-2)', ''],
+            ['Thunder vs Pelicans (4-0)', '✅ (4-2)', '✅ (4-2)', '✅ (4-2)', '✅ (4-1)', '', '', ''],
+            ['Suns vs Timberwolves (0-4)', '✅ (3-4)', '❎ (4-3)', '✅ (2-4)', '❎ (4-2)', '', '❎ (4-2)', ''],
+            ['Kings vs Pelicans', '❎', '', '❎', '❎', '', '', ''],
+            ['Bulls vs Heat', '✅', '❎', '✅', '✅', '', '❎', ''],
+            ['76ers vs Heat', '✅', '', '✅', '✅', '', '', ''],
+            ['Bulls vs Hawks', '✅', '', '✅', '❎', '', '', ''],
+            ['Lakers vs Pelicans', '✅', '✅', '✅', '✅', '✅', '', ''],
+            ['Kings vs Warriors', '❎', '❎', '❎', '✅', '✅', '', ''],
         ];
 
         // Initialize Grid.js table
