--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         // Initialize Grid.js table
         const grid = new gridjs.Grid({
-            columns: ['Game', '_w1998', 'Chrïs', 'Lance', '比爾', '安東東', 'PinYen'], // Column headers
+            columns: ['Game', '_w1998', 'Chrïs', 'Lance', '比爾', '安東東', 'PinYen', 'liyang'], // Column headers
             data: gridData.slice(1), // Data for the table
             resizable: true, // Allow columns to be resizable
             search: true, // Enable search functionality
