--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
         // Data for the Grid.js table
         const gridData = [
-            ['Game Match', '_w1998', 'Chrïs', 'Lance', '比爾', '安東東', 'PinYen', 'liyang'];
+            ['Game Match', '_w1998', 'Chrïs', 'Lance', '比爾', '安東東', 'PinYen', 'liyang'],
             ['Celtics vs Cavaliers', '', '', '', '', '', '', ''],
             ['Thunder vs Mavericks', '', '', '', '', '', '', ''],
             ['Knicks vs Pacers', '', '', '', '', '', '', ''],
