--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
     <script>
         // Data for player names and scores
         let playerNames = ['_w1998', 'Chrïs', 'Lance', '比爾', '安東東', 'PinYen', 'liyang'];
-        let scores = [11, 10, 10, 9, 2, 7, 0];
+        let scores = [14, 13, 13, 10, 2, 7, 0];
 
         // Data for the Grid.js table
         const gridData = [
             ['Game Match', '_w1998', 'Chrïs', 'Lance', '比爾', '安東東', 'PinYen', 'liyang'],
-            ['Celtics vs Cavaliers', '', '', '', '', '', '', ''],
             ['Thunder vs Mavericks', '', '', '', '', '', '', ''],
             ['Knicks vs Pacers', '', '', '', '', '', '', ''],
             ['Nuggets vs Timberwolves', '', '', '', '', '', '', ''],
+            ['Celtics vs Cavaliers (4-1)', '✅ (4-1)', '✅ (4-1)', '✅ (4-1)', '✅ (4-0)', '', '', ''],
             ['Magic vs Cavaliers (3-4)', '✅ (2-4)', '❎ (4-2)', '❎ (4-2)', '✅ (1-4)', '', '❎ (4-2)', ''],
             ['Mavericks vs Clippers (4-2)', '❎ (2-4)', '✅ (4-3)', '✅ (4-3)', '✅ (4-3)', '', '✅ (4-2)', ''],
             ['76ers vs Knicks (2-4)', '❎ (4-2)', '✅ (2-4)', '✅ (3-4)', '❎ (4-1)', '', '❎ (4-2)', ''],
