--- a/index.html
+++ b/index.html
@@ -65,13 +65,15 @@
     <script>
         // Data for player names and scores
         let playerNames = ['_w1998', 'Chrïs', 'Lance', '比爾', '安東東', 'PinYen', 'liyang'];
-        let scores = [14, 16, 13, 10, 2, 7, 0];
+        let scores = [15, 19, 16, 10, 2, 10, 0];
 
         // Data for the Grid.js table
         const gridData = [
             ['Game Match', '_w1998', 'Chrïs', 'Lance', '比爾', '安東東', 'PinYen', 'liyang'],
-            ['Knicks vs Pacers', '', '', '', '', '', '', ''],
-            ['Nuggets vs Timberwolves', '', '', '', '', '', '', ''],
+            ['Timberwolves vs Mavericks', '', '', '', '', '', '', ''],
+            ['Celtics vs Pacers', '', '', '', '', '', '', ''],
+            ['Nuggets vs Timberwolves (3-4)', '✅ (2-4)', '✅ (3-4)', '✅ (3-4)', '❎ (4-0)', '', '✅ (3-4)', ''],
+            ['Knicks vs Pacers (3-4)', '❎ (4-2)', '❎ (4-2)', '❎ (4-1)', '', '', '', ''],
             ['Thunder vs Mavericks (2-4)', '❎ (4-2)', '✅ (2-4)', '❎ (4-2)', '❎ (4-3)', '', '', '❎ (4-3)'],
             ['Celtics vs Cavaliers (4-1)', '✅ (4-1)', '✅ (4-1)', '✅ (4-1)', '✅ (4-0)', '', '', ''],
             ['Magic vs Cavaliers (3-4)', '✅ (2-4)', '❎ (4-2)', '❎ (4-2)', '✅ (1-4)', '', '❎ (4-2)', ''],
