--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
     <script>
         // Data for player names and scores
         let playerNames = ['_w1998', 'Chrïs', 'Lance', '比爾', '安東東', 'PinYen', 'liyang'];
-        let scores = [15, 19, 16, 10, 2, 10, 0];
+        let scores = [16, 19, 17, 10, 2, 10, 0];
 
         // Data for the Grid.js table
         const gridData = [
             ['Game Match', '_w1998', 'Chrïs', 'Lance', '比爾', '安東東', 'PinYen', 'liyang'],
             ['Timberwolves vs Mavericks', '', '', '', '', '', '', ''],
-            ['Celtics vs Pacers', '', '', '', '', '', '', ''],
+            ['Celtics vs Pacers (4-0)', '✅ (4-1)', '', '✅ (4-2)', '', '❎ (3-4)', '', ''],
             ['Nuggets vs Timberwolves (3-4)', '✅ (2-4)', '✅ (3-4)', '✅ (3-4)', '❎ (4-0)', '', '✅ (3-4)', ''],
             ['Knicks vs Pacers (3-4)', '❎ (4-2)', '❎ (4-2)', '❎ (4-1)', '', '', '', ''],
             ['Thunder vs Mavericks (2-4)', '❎ (4-2)', '✅ (2-4)', '❎ (4-2)', '❎ (4-3)', '', '', '❎ (4-3)'],
