--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         }
 
         body {
-            background-image: url('bg.jpg');
+            background-image: url('2024.png');
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
@@ -65,12 +65,13 @@
     <script>
         // Data for player names and scores
         let playerNames = ['_w1998', 'Chrïs', 'Lance', '比爾', '安東東', 'PinYen', 'liyang'];
-        let scores = [16, 19, 17, 10, 2, 10, 0];
+        let scores = [16, 19, 18, 10, 2, 10, 0];
 
         // Data for the Grid.js table
         const gridData = [
             ['Game Match', '_w1998', 'Chrïs', 'Lance', '比爾', '安東東', 'PinYen', 'liyang'],
-            ['Timberwolves vs Mavericks', '', '', '', '', '', '', ''],
+            ['Celtics vs Mavericks', '', '', '', '', '', '', ''],
+            ['Timberwolves vs Mavericks (1-4)', '❎ (4-2)', '', '✅ (3-4)', '', '❎ (4-2)', '', ''],
             ['Celtics vs Pacers (4-0)', '✅ (4-1)', '', '✅ (4-2)', '', '❎ (3-4)', '', ''],
             ['Nuggets vs Timberwolves (3-4)', '✅ (2-4)', '✅ (3-4)', '✅ (3-4)', '❎ (4-0)', '', '✅ (3-4)', ''],
             ['Knicks vs Pacers (3-4)', '❎ (4-2)', '❎ (4-2)', '❎ (4-1)', '', '', '', ''],
